@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               WordPress-XMLRPC
-version:            1.22
+version:            1.23
 abstract:           api to wordpress xml rpc calls
 author:
     - Leo Charre leocharre at cpan dot org
@@ -21,7 +21,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.50
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
